--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
         python-version: [3.6, 3.7, 3.8]
-    runs-on: ubuntu-latest
-    name: Run tests on Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
+    name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - name: Setup Python
